stuf/src/p4/tests/t038.err
Semantic error on line 5: Index value '-5' is out of bounds for array 'my_rectangle'.
